--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        
+        pip install -r requirements.txt
+        pip install pytest # Install pytest
 
     - name: Run tests
       run: |
